increased z-index to fix overlap with pairs

--- a/src/components/CTable/styles.module.scss
+++ b/src/components/CTable/styles.module.scss
@@ -18,7 +18,7 @@
 .header-table {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
     background-color: $White;
     border-radius: 8px;
     height: 47px;
